--- a/src/main/resources/messages/messages_cz.yml
+++ b/src/main/resources/messages/messages_cz.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7>> "
+BungeeProxy: "&cProsím, připojte se přes proxy bungeecord!"
 PlayerNotVerified: "&cNemůžeš bojovat proti {player} zatímco není přihlášen / registrován"
 AlreadyPlaying: "&cTento hráč už hraje"
 Captcha: "&7Váš kód captcha je: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&aCaptcha kód ověřen"
 InvalidCaptcha: "&cZadaný kód captcha není platný nebo správný"
 InvalidCaptchaArguments: "&cZadaná captcha má neplatné argumenty ( {arguments}&c )"
 AlreadyCaptcha: "&aVáš kód captcha je již ověřen"
-Login: "&bProsím, použi &3/login &c<tvé heslo> {captcha}"
+Login: "&bProsím, použi &3/login &c<tvé heslo>"
 Logged: "&aSi přihlášen, Vítej zpět &7{player}"
 AlreadyLogged: "&cUž si přihlášen"
 LogError: "&cPři pokusu o přihlášení došlo k chybě: &4Zadal si špatné heslo"
-Register: "&bProsím, použi &3/register &c<heslo> <heslo znovu> {captcha}"
+Register: "&bProsím, použi &3/register &c<heslo> <heslo znovu>"
 Registered: "&aRegistrace dokončena, děkujeme za hraní"
 AlreadyRegistered: "&cUž si zaregistrován!"
 RegisterError: "&cPři pokusu o registraci došlo k chybě: &4Hesla se neshodují"
