--- a/src/main/resources/messages/messages_en.yml
+++ b/src/main/resources/messages/messages_en.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7>> "
+BungeeProxy: "&cPlease, connect through bungeecord proxy!"
 PlayerNotVerified: "&cYou can't fight against {player} while he's not logged/registered"
 AlreadyPlaying: "&cThat player is already playing"
 Captcha: "&7Your captcha code is: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&aCaptcha code validated"
 InvalidCaptcha: "&cThe specified captcha code is not valid or correct"
 InvalidCaptchaArguments: "&cThe provided captcha has invalid arguments ( {arguments}&c )"
 AlreadyCaptcha: "&aYour captcha code is already verified"
-Login: "&bPlease, use &3/login &c<password> &e{captcha}"
+Login: "&bPlease, use &3/login &c<password>"
 Logged: "&aLogged-in, welcome back &7{player}"
 AlreadyLogged: "&cYou are already logged"
 LogError: "&cError while trying to log-in: &4incorrect password"
-Register: "&bPlease, use &3/register &c<password> <password> &e{captcha}"
+Register: "&bPlease, use &3/register &c<password> <password>"
 Registered: "&aRegister completed, thank for playing"
 AlreadyRegistered: "&cYou are already registered"
 RegisterError: "&cError while trying to register: &4Passwords doesn't match"
