--- a/src/main/resources/messages/messages_es.yml
+++ b/src/main/resources/messages/messages_es.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7>> "
+BungeeProxy: "&cPor favor, conéctese a través del proxy bungeecord!"
 PlayerNotVerified: "&cNo puedes luchar contra {player} por qué aun no se ha logueado/registrado"
 AlreadyPlaying: "&cEste jugador ya está jugando"
 Captcha: "&7Tu captcha es: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&aCódigo captcha validado"
 InvalidCaptcha: "&cEl captcha especificado no es válido o correcto"
 InvalidCaptchaArguments: "&cEl captcha especificado tiene argumentos inválidos ( {arguments}&c )"
 AlreadyCaptcha: "&aTu captcha ya está validado"
-Login: "&bPorfavor, usa &3/login &c<contraseña> {captcha}"
+Login: "&bPorfavor, usa &3/login &c<contraseña>"
 Logged: "&aLogeado, bienvenido de vuelta &7{player}"
 AlreadyLogged: "&cYa estás logueado"
 LogError: "&cError al intentar iniciar sesión: &4contraseña incorrecta"
-Register: "&bPorfavor, usa &3/register &c<contraseña> <contraseña> {captcha}"
+Register: "&bPorfavor, usa &3/register &c<contraseña> <contraseña>"
 Registered: "&aRegistro completado, gracias por jugar"
 AlreadyRegistered: "&cYa estás registrado"
 RegisterError: "&cError al intentar registrarse: &4Las contraseñas no coinciden"
