--- a/src/main/resources/messages/messages_pl.yml
+++ b/src/main/resources/messages/messages_pl.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7» "
+BungeeProxy: "&cPołącz się przez proxy bungeecord!"
 PlayerNotVerified: "&cNie możesz walczyć z {player} gdy nie jest zalogowany/zarejstrowany"
 AlreadyPlaying: "&cTen gracz już gra"
 Captcha: "&7Twój kod captcha to: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&aZatwierdzono kod Captcha"
 InvalidCaptcha: "&cPodany kod captcha jest nieprawidłowy lub nieprawidłowy"
 InvalidCaptchaArguments: "&cPodana captcha ma nieprawidłowe argumenty ( {arguments}&c )"
 AlreadyCaptcha: "&aTwój kod captcha jest już zweryfikowany"
-Login: "&bZaloguj się za pomocą polecenia: &3/login &c<hasło> {captcha}"
+Login: "&bZaloguj się za pomocą polecenia: &3/login &c<hasło>"
 Logged: "&aZalogowano, witaj ponownie &7{player}"
 AlreadyLogged: "&cJesteś już zalogowany"
 LogError: "&cBłąd podczas próby logowania: &4Nieprawidłowe hasło!"
-Register: "&bZarejstruj się za pomocą polecenia: &3/register &c<hasło> <powtórzhasło> {captcha}"
+Register: "&bZarejstruj się za pomocą polecenia: &3/register &c<hasło> <powtórzhasło>"
 Registered: "&aRejestracja zakończona, baw się dobrze!"
 AlreadyRegistered: "&cJesteś już zarejestrowany"
 RegisterError: "&cBłąd podczas próby rejestracji: &4Hasła nie są identyczne!"
