--- a/src/main/resources/messages/messages_fr.yml
+++ b/src/main/resources/messages/messages_fr.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7>> "
+BungeeProxy: "&cVeuillez vous connecter via le proxy bungeecord!"
 PlayerNotVerified: "&cTu ne peut pas tapper {player} tant qu'il n'est pas connecté/enregistré"
 AlreadyPlaying: "&cCe joueur joue actuellement"
 Captcha: "&7Votre code captcha est: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&aCode captcha validé"
 InvalidCaptcha: "&cLe code captcha spécifié n'est pas valide ou correct"
 InvalidCaptchaArguments: "&cLe captcha fourni a des arguments non valides ( {arguments}&c )"
 AlreadyCaptcha: "&aVotre code captcha est déjà vérifié"
-Login: "&bVeuillez, utiliser &3/login &c<mot de passe> {captcha}"
+Login: "&bVeuillez, utiliser &3/login &c<mot de passe>"
 Logged: "&aTu es désormais connecté ! Bienvenue à toi &7{player} !"
 AlreadyLogged: "&cTu es déjà connecté !"
 LogError: "&cErreur ! &4Mot de passe incorrecte"
-Register: "&bUtilisez &3/register &c<mot de passe> <mot de passe> {captcha}"
+Register: "&bUtilisez &3/register &c<mot de passe> <mot de passe>"
 Registered: "&aSuccès de l'enregistrement !"
 AlreadyRegistered: "&cTu es déjà enregistré sur nos bases de données !"
 RegisterError: "&cLes deux mot de passes ne correspondent pas !"
