--- a/src/main/resources/messages/messages_it.yml
+++ b/src/main/resources/messages/messages_it.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7>> "
+BungeeProxy: "&cPer favore, connettiti tramite il proxy bungeecord!"
 PlayerNotVerified: "&cNon puoi combattere {player} mentre non sei logato/registrato"
 AlreadyPlaying: "&cQuesto giocatore sta già giocando"
 Captcha: "&7Il tuo codice captcha è: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&aCodice captcha convalidato"
 InvalidCaptcha: "&cIl codice captcha specificato non è valido o corretto"
 InvalidCaptchaArguments: "&cIl captcha fornito ha argomenti non validi ( {arguments}&c )"
 AlreadyCaptcha: "&aIl tuo codice captcha è già verificato"
-Login: "&bPerfavore, usa &3/login &c<password> {captcha}"
+Login: "&bPerfavore, usa &3/login &c<password>"
 Logged: "&aLogato, bentornato &7{player}"
 AlreadyLogged: "&cSei già logato"
 LogError: "&cErrore mentre ti stavi logando: &4password non corretta"
-Register: "&bPerfavore, usa &3/register &c<password> <password> {captcha}"
+Register: "&bPerfavore, usa &3/register &c<password> <password>"
 Registered: "&aRegistrazione completata, grazie"
 AlreadyRegistered: "&cSei già registrato"
 RegisterError: "&cErrore mentre ti stavi registrando: &4Le password non combacciano"
