--- a/src/main/resources/messages/messages_ru.yml
+++ b/src/main/resources/messages/messages_ru.yml
@@ -1,6 +1,7 @@
-#Russian translate for LockLogin, last update 20.03.21 (19:45 MSK)
+#Russian translate for LockLogin, last update 24.03.21 ( 02:27 GMT+8 )
 #Translation by hitewaer in spigotmc.org, big thanks -KarmaDev
 Prefix: '&eLockLogin &7>> '
+BungeeProxy: "&cПожалуйста, подключайтесь через прокси bungeecord!"
 PlayerNotVerified: '&cВы не можете бить игрока {player} пока он вводит пароль!'
 AlreadyPlaying: '&cЭтот игрок уже на сервере!'
 Captcha: '&7Ваша капча: &e{captcha}'
@@ -11,11 +12,11 @@ CaptchaValidated: '&aКапча успешно принята!'
 InvalidCaptcha: '&cВы ввели неверную капчу!'
 InvalidCaptchaArguments: '&cУказанные аргументы для капчи неверны! ( {arguments}&c )'
 AlreadyCaptcha: '&aВы уже успешно ввели капчу!'
-Login: '&bПожалуйста, напишите &3/login &c<пароль> &e{captcha}'
+Login: '&bПожалуйста, напишите &3/login &c<пароль>'
 Logged: '&aПароль верен, с возвращением, &7{player}&a!'
 AlreadyLogged: '&cВы уже авторизованы!'
 LogError: '&cОшибка при входе: &4Неверный пароль'
-Register: '&bПожалуйста, напишите &3/register &c<пароль> <пароль> &e{captcha}'
+Register: '&bПожалуйста, напишите &3/register &c<пароль> <пароль>'
 Registered: '&aРегистрация успешно завершена! Приятной игры!'
 AlreadyRegistered: '&cВы уже зарегистрированы!'
 RegisterError: '&cОшибка при регистрации: &4Пароли не совпадают'
