--- a/src/main/resources/messages/messages_zh.yml
+++ b/src/main/resources/messages/messages_zh.yml
@@ -1,4 +1,5 @@
 Prefix: "&eLockLogin &7>> "
+BungeeProxy: "&c请通过Bungeecord代理连接!"
 PlayerNotVerified: "&c{player} 现在未登录/未注册，您无法与他战斗"
 AlreadyPlaying: "&c这个玩家已经在线了"
 Captcha: "&7您的验证码是: &e{captcha}"
@@ -9,11 +10,11 @@ CaptchaValidated: "&a验证码已验证"
 InvalidCaptcha: "&c指定的验证码无效或正确"
 InvalidCaptchaArguments: "&c提供的验证码包含无效的参数 ( {arguments}&c )"
 AlreadyCaptcha: "&a您的验证码已通过验证"
-Login: "&b请使用 &3/login &c<你的密码> {captcha}"
+Login: "&b请使用 &3/login &c<你的密码>"
 Logged: "&a登陆成功,欢迎回来 &7{player}"
 AlreadyLogged: "&c你已成功登录"
 LogError: "&c在试一下登陆吧: &4密码错误"
-Register: "&b请使用 &3/register &c<密码> <密码> {captcha}"
+Register: "&b请使用 &3/register &c<密码> <密码>"
 Registered: "&a注册成功了, 感谢您的注册"
 AlreadyRegistered: "&c你已经注册了"
 RegisterError: "&c请再试一次注册: &4两次密码不匹配"
