--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>LockLogin</artifactId>
     <groupId>ml.karmaconfigs</groupId>
-    <version>1.0.9.1</version>
+    <version>1.0.9.6</version>
     <packaging>jar</packaging>
 
     <name>LockLogin</name>
@@ -23,6 +23,13 @@
         </license>
     </licenses>
 
+    <!--
+    <organization>
+        <name>GSA</name>
+        <url>https://karmaconfigs.ml/</url>
+    </organization>
+    -->
+
     <developers>
         <developer>
             <name>Karma Dev</name>
@@ -36,7 +43,7 @@
         <connection>scm:git:git://github.com/KarmaConfigs/LockLogin.git</connection>
         <developerConnection>scm:git:ssh://github.com:KarmaConfigs/LockLogin.git</developerConnection>
         <url>http://github.com/KarmaConfigs/LockLogin/tree/master</url>
-        <tag>1.0.7.6</tag>
+        <tag>1.0.9.6</tag>
     </scm>
 
     <build>
@@ -63,6 +70,10 @@
                         <relocation>
                             <pattern>li.cock.ie</pattern>
                             <shadedPattern>ml.karmaconfigs.lockloginsystem.shaded.reflection</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>at.gadermaier.argon2</pattern>
+                            <shadedPattern>ml.karmaconfigs.lockloginsystem.shaded.argon2</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -150,6 +161,7 @@
         <project.buildType>RELEASE</project.buildType>
         <project.debug>false</project.debug>
         <project.unsafeUpdate>false</project.unsafeUpdate>
+        <project.logSizeLimit>70</project.logSizeLimit>
     </properties>
 
     <!--
@@ -182,13 +194,17 @@
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net/</url>
         </repository>
+        <repository>
+            <id>velocity</id>
+            <url>https://repo.velocitypowered.com/snapshots/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>ml.karmaconfigs</groupId>
             <artifactId>KarmaAPI-Bundle</artifactId>
-            <version>1.1.1</version>
+            <version>1.1.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -222,6 +238,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.velocitypowered</groupId>
+            <artifactId>velocity-api</artifactId>
+            <version>1.1.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>20.0.0</version>
@@ -246,12 +268,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>4.0.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.cassandra</groupId>
             <artifactId>cassandra-all</artifactId>
             <version>0.8.1</version>
@@ -266,6 +282,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-web</artifactId>
             <version>2.14.1</version>
             <scope>provided</scope>
         </dependency>
