--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>LockLogin</artifactId>
     <groupId>ml.karmaconfigs</groupId>
-    <version>1.0.9.6</version>
+    <version>1.1.0.2</version>
     <packaging>jar</packaging>
 
     <name>LockLogin</name>
@@ -23,13 +23,6 @@
         </license>
     </licenses>
 
-    <!--
-    <organization>
-        <name>GSA</name>
-        <url>https://karmaconfigs.ml/</url>
-    </organization>
-    -->
-
     <developers>
         <developer>
             <name>Karma Dev</name>
@@ -43,7 +36,7 @@
         <connection>scm:git:git://github.com/KarmaConfigs/LockLogin.git</connection>
         <developerConnection>scm:git:ssh://github.com:KarmaConfigs/LockLogin.git</developerConnection>
         <url>http://github.com/KarmaConfigs/LockLogin/tree/master</url>
-        <tag>1.0.9.6</tag>
+        <tag>1.1.0.2-SNAPSHOT</tag>
     </scm>
 
     <build>
@@ -204,7 +197,7 @@
         <dependency>
             <groupId>ml.karmaconfigs</groupId>
             <artifactId>KarmaAPI-Bundle</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
