--- a/src/main/resources/global.yml
+++ b/src/main/resources/global.yml
@@ -5,3 +5,4 @@ project_build: ${project.buildType}
 project_debug: ${project.debug}
 project_unsafeUpdate: ${project.unsafeUpdate}
 project_logSizeLimit: ${project.logSizeLimit}
+project_karmaapi: ${project.karmaapi}
