--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>LockLogin</artifactId>
     <groupId>ml.karmaconfigs</groupId>
-    <version>1.1.0.2</version>
+    <version>1.1.0.5</version>
     <packaging>jar</packaging>
 
     <name>LockLogin</name>
@@ -56,10 +56,6 @@
                 <version>3.2.4</version>
                 <configuration>
                     <relocations>
-                        <relocation>
-                            <pattern>ml.karmaconfigs.api</pattern>
-                            <shadedPattern>ml.karmaconfigs.lockloginsystem.shaded.karmapi</shadedPattern>
-                        </relocation>
                         <relocation>
                             <pattern>li.cock.ie</pattern>
                             <shadedPattern>ml.karmaconfigs.lockloginsystem.shaded.reflection</shadedPattern>
@@ -155,6 +151,7 @@
         <project.debug>false</project.debug>
         <project.unsafeUpdate>false</project.unsafeUpdate>
         <project.logSizeLimit>70</project.logSizeLimit>
+        <project.karmaapi>1.1.4</project.karmaapi>
     </properties>
 
     <!--
@@ -197,8 +194,8 @@
         <dependency>
             <groupId>ml.karmaconfigs</groupId>
             <artifactId>KarmaAPI-Bundle</artifactId>
-            <version>1.1.3</version>
-            <scope>compile</scope>
+            <version>${project.karmaapi}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.mkammerer</groupId>
