--- a/templates/community/messages/template_fr.yml
+++ b/templates/community/messages/template_fr.yml
@@ -25,35 +25,33 @@ PermissionError: "&5&oVous ne disposez pas des droits {permission}"
 #BungeeCord proxy message
 BungeeProxy: "&5&oVeuillez vous connecter via le proxy bungee!"
 
+#Inventories messages
+PinTitle: "&8&lLockLogin pinner"
+AltTitle: "&8&lAlt accounts lookup"
+InfoTitle: "&8&lBundled player info"
+Next: "&eNext"
+Back: "&eBack"
+
 #Session messages - Manager
 PlayerNotVerified: "&5&oVous ne pouvez pas vous battre contre {player} alors qu'il n'est pas connecté/enregistré"
 AlreadyPlaying: "&5&oLe joueur joue déjà"
-PasswordMinChar: "&5&oLe mot de passe doit avoir 4 caractères min"
 MaxIp: "&5&oCompte maximum par IP atteint sur le serveur"
 ConnectionError: "&5&oLe joueur {player} n'est pas en ligne"
-PlayerInfoUsage: "&5&oVeuillez utiliser /playerinfo <player>"
-LookUpUsage: "&5&oS'il vous plaît, utilisez /lookup <player>"
-AltFound: "&5&o{player} peut avoir {alts} comptes alt, type /lookup {player} pour plus d'informations"
+PlayerInfoUsage: "&5&oSous-arguments playerinfo valides: &e<player|players>&7, &e<@[alias]>"
+LookUpUsage: "&5&oS'il vous plaît, utilisez /account alts <player>"
+AltFound: "&5&o{player} peut avoir {alts} comptes alt, type /account alts {player} pour plus d'informations"
 NeverPlayed: "&5&oLe joueur {player} n'a jamais joué sur le serveur"
 TargetAccessError: "&5&oLe joueur {player} n'est pas connecté/enregistré"
 IncorrectPassword: "&5&oLe mot de passe fourni n'est pas correct."
-OnlyAzuriom:
-  - "{ServerName}"
-  - ""
-  - "&cVeuillez enregistrer votre compte auprès de:"
-  - "&7https://myazuriomwebsite.com/user/register"
-
-#Session messages - Captcha
 Captcha: "&7Votre code captcha est:&e { captcha }"
-TypeCaptcha: "&5&oS'il vous plaît, utilisez /captcha <captcha>"
-CaptchaTimeOut: "&5&oVous avez pris trop de temps pour écrire des captcha!"
-SpecifyCaptcha: "&5&oVeuillez fournir un code captcha valide"
-CaptchaValidated: "&dCode captcha validé"
 InvalidCaptcha: "&5&oLe code captcha spécifié n'est ni valide ni correct"
-AlreadyCaptcha: "&5&oVotre code captcha est déjà vérifié!"
+SessionServerDisabled: "&5&oLes sessions persistantes sont désactivées sur ce serveur"
+SessionEnabled: "&dSession persistante activée pour votre compte"
+SessionDisabled: "&5&oSession persistante désactivée pour votre compte"
 
 #Session messages - Register
 Register: "&5&oS'il vous plaît, utilisez /register <password> <password> <captcha>"
+RegisterBar: "{color}Vous avez &7{time}{color} à enregistrer"
 Registered: "&dInscription terminée, merci de jouer"
 AlreadyRegistered: "&5&oVous êtes déjà enregistré"
 RegisterError: "&5&oLes mots de passe fournis ne correspondent pas!"
@@ -71,6 +69,7 @@ MaxRegisters:
 
 #Session messages - Login
 Login: "&5&oVeuillez utiliser /login <password> <captcha>"
+LoginBar: "{color}Vous avez &7{time}{color} pour la connexion"
 Logged: "&dconnecté, bienvenue&7 {player}"
 AlreadyLogged: "&5&oVous êtes déjà connecté!"
 LoginInsecure: "&5&oVotre mot de passe a été classifié comme non sécurisé et vous devez le modifier"
@@ -79,12 +78,15 @@ LoginTitle: "&7Vous avez"
 LoginSubtitle: "&b{time} &7pour la connexion"
 
 #Session messages - Pin
-PinTitle: "&eLockLogin pinner"
+PinUsages: "&5&oSous-arguments 2FA valides: &e<setup>&7, &e<remove>&7, &e<change>"
 PinSet: "&dVotre broche a été définie avec succès"
+PinReseted: "&5&oÉpingle supprimée, votre compte est désormais moins sécurisé"
+PinChanged: "&dVotre code PIN a été modifié avec succès"
 AlreadyPin: "&5&oVous avez déjà défini votre broche!"
 NoPin: "&5&oVous n'avez pas de broche!"
 SetPin: "&5&oS'il vous plaît, utilisez /pin setup <pin>"
 ResetPin: "&5&oS'il vous plaît, utilisez /pin reset <pin>"
+ChangePin: "&5&oS'il vous plaît, utilisez /pin change <pin> <new pin>"
 PinDisabled: "&5&oPins sont désactivés"
 PinLength: "&5&oPin doit avoir 4 chiffres"
 IncorrectPin: "&5&oLa broche spécifiée n'est pas correcte!"
@@ -118,22 +120,22 @@ Enabled2FA: "&d2FA activé, votre compte est à nouveau sécurisé"
   - "&78 - Type /2fa <code shown in app> ou <scratch code>"
 2FaLink: "&bCliquez ici pour obtenir votre code QR 2FA"
 
-#Session messages - Password change
-ChangePass: "&5&oS'il vous plaît, utilisez /{arg} <password> <new password>"
+#Session messages - Account management
+AccountArguments: "&5&oSous-arguments session valides: &e<change>&7, &e<unlock>&7, &e<close>&7, &e<remove>&7, &e<alts>"
+Change: "&5&oS'il vous plaît, utilisez /{arg} <password> <new password>"
 ChangeSame: "&5&oVotre mot de passe ne peut pas être identique à l'ancien!"
 ChangeDone: "&dVotre mot de passe a changé!"
-
-#Session messages - Unloging
-UnLog: "&5&oVeuillez utiliser /{arg}"
-UnLogged: "&5&oSession fermée, reconnexion maintenant!"
-ForcedUnLog: "&5&oVotre session a été fermée par un administrateur, connectez-vous à nouveau"
-ForcedUnLogAdmin: "&dSession de {player} fermée"
-
-#Session messages - Account removal
-DelAccount: "&5&oS'il vous plaît, utilisez /{arg} <password|player> <password>"
-DelAccountMatch: "&5&oLes mots de passe fournis ne correspondent pas"
-AccountDeleted: "&5&oVotre compte a été supprimé"
-ForcedDelAccount:
+AccountUnlock: "&5&oS'il vous plaît, utilisez /account unlock <player>"
+AccountUnlocked: "&dLe compte de {player} a été déverrouillé"
+AccountNotLocked: "&5&oLe compte de {player} n'est pas verrouillé!"
+Close: "&5&oVeuillez utiliser /account close [player]"
+Closed: "&5&oSession fermée, reconnexion maintenant!"
+ForceClose: "&5&oVotre session a été fermée par un administrateur, connectez-vous à nouveau"
+ForceCloseAdmin: "&dSession de {player} fermée"
+Remove: "&5&oS'il vous plaît, utilisez /account remove <password|player> [password]"
+RemoveAccountMatch: "&5&oLes mots de passe fournis ne correspondent pas"
+AccountRemoved: "&5&oVotre compte a été supprimé"
+ForcedAccountRemoval:
   - "{ServerName}"
   - ""
   - "&cVotre compte a été supprimé par"
@@ -144,7 +146,7 @@ ForcedDelAccount:
   - ""
   - "&cSi vous n'avez pas appelé cette action, s'il vous plaît"
   - "&cprésente cette action à l'adresse suivante: &7https://discordexample.gg"
-ForcedDelAccountAdmin: "&dCompte de {player} supprimé"
+ForcedAccountRemovalAdmin: "&dCompte de {player} supprimé, n'oubliez pas d'exécuter / déverrouiller le compte {player}!"
 
 #Spawn utilities ( includes take back )
 SpawnSet: "&dL'emplacement du frai de connexion a été défini"
@@ -152,15 +154,18 @@ LocationsReset: "&dTous les derniers emplacements ont été réinitialisé"
 LocationReset: "&dLe dernier emplacement de {player} a été réinitialisé"
 LocationsFixed: "&dTous les derniers emplacements ont été corrigés"
 LocationFixed: "&dL'emplacement de {player} a été corrigé"
-NoLastLocation: "&5&oLe joueur {player} n'a pas le dernier emplacement"
-RestLastLocUsage: "&5&oS'il vous plaît, utilisez /locations [player|@all|@me] <remove|fix>"
+ResetLastLocUsage: "&5&oS'il vous plaît, utilisez /locations [player|@all|@me] <remove|fix>"
 
-#Account migration
-Migrating: "&dMigration du compte {player} vers {type}"
-MigratingAll: "&dMigration des comptes de tous vers {type}"
-Migrated: "&dLa migration du (s) compte (s) s'est terminée"
-MigrationUsage: "&5&oS'il vous plaît, utilisez /migrate"
-MigrationConnectionError: "&5&oUne erreur s'est produite lors de la tentative de connexion à {type}"
+#Alias messages
+AliasArguments: "&5&oSous-arguments playerinfo valides: &e<create>&7, &e<destroy>&7, &e<add>&7, &e<remove> [alias] [player(s)]"
+AliasCreated: "&dAlias {alias} a été créé avec succès"
+AliasDestroyed: "&5&oAlias {alias} a été détruit"
+AliasExists: "&5&oAlias {alias} existe déjà!"
+AliasNotFound: "&5&oImpossible de trouver un alias appelé {alias}"
+AddedPlayer: "&dAjouté {player} à {alias}"
+RemovedPlayer: "&d{player} a été supprimé de {alias}"
+PlayerNotIn: "&5&o{player} n'est pas dans {alias}!"
+PlayerAlreadyIn: "&5&o{player} est déjà dans {alias}!"
 
 #Security messages
 IpBlocked:
